# CloudRedirect

./: .gitignore  CMakeLists.txt  README.md  Version.props
flatpak/: org.cloudredirect.CloudRedirect.metainfo.xml  org.cloudredirect.CloudRedirect.yml
src/common/: app_state.cpp  app_state.h  autocloud_bootstrap.cpp  autocloud_bootstrap.h  autocloud_scan.cpp  autocloud_scan.h  autocloud_util.h  cloud_provider_base.cpp  cloud_storage.cpp  cloud_storage.h  cloud_work_queue.cpp  local_storage.cpp  manifest_store.cpp  protobuf.h  rpc_handlers.h  steam_kv_injector.cpp
src/platform/linux/: cloud_intercept.cpp  http_server.cpp  http_transport_linux.cpp  log.cpp
src/platform/win/: cloud_intercept.cpp  dllmain.cpp  http_server.cpp  log.cpp
src/providers/: google_drive.cpp  google_drive_provider.h  local_disk_provider.cpp  onedrive.cpp  onedrive_provider.h
ui/: App.xaml  App.xaml.cs  AssemblyInfo.cs
ui/Converters/: UrlToImageSourceConverter.cs
ui/Pages/: AppsPage.xaml  ChoiceModePage.xaml  ChoiceModePage.xaml.cs  CleanupPage.xaml  DashboardPage.xaml  ManifestPinningPage.xaml  ManifestPinningPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  SetupPage.xaml
ui/Resources/: LocExtension.cs  S.cs  Strings.resx
ui/Services/: AppUpdater.cs  BackupDiscovery.cs  BackupListBuilder.cs  ConfigHelper.cs  Dialog.cs  EmbeddedDll.cs  FileTokensParser.cs  FileUtils.cs  IUiCloudProvider.cs  OAuthService.cs  OrphanBlobService.cs  SteamStoreClient.cs
ui/Services/Patching/: PatchTypes.cs  PayloadCrypto.cs  PeImportParser.cs  Signatures.cs
ui/Services/Providers/: FolderUiCloudProvider.cs
ui/Windows/: DisclaimerWindow.xaml
